# textualize

./: README.md  chat_history.json  chat_test.py  pyproject.toml
src/textualize/: chat_test.py  chat_test1.py  notify_test.py
src/textualize/kafka/: consumer.py  data.py  producer.py
