[project]
name = "textualize"
version = "0.2.0"
description = "Practice for Textualize"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "textualize>=0.1",
    "textual-dev>=1.5.1",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
