[project]
name = "textualize"
version = "0.2.0"
description = "Practice for Textualize"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "textual>=0.73.0",
    "kafka-python>=2.0.2",
    "pyspark>=3.5.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
