[project]
name = "textualize"
version = "0.2.0"
description = "Practice for Textualize"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "textualize>=0.1",
    "textual-dev>=1.5.1",
    "pandas>=2.0.3",
    "kafka>=1.3.5",
    "kafka-python>=2.0.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
